# blog-flask

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
flaskr/: __init__.py  auth.py  blog.py  db.py  myConfig.py  schema.sql  uploads.py  utils.py
flaskr/assets/javascript/: blog_create.js  blog_update.js  main.js
flaskr/templates/: base.html.jinja
flaskr/templates/auth/: login.html.jinja  register.html.jinja
flaskr/templates/blog/: create.html.jinja  index.html.jinja  update.html.jinja
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
