[metadata]
name = blog-flask
version = 1.0.0
url = https://github.com/bevilaquaBruno/blog-flask.git
license = BSD-3-Clause
maintainer = Bruno Bevilaqua
maintainer_email = bbbevilaqua@gmail.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr